add a bool response endpoint to native aot tests
